--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,7 +1,8 @@
+// filepath: biomeConfig.json
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "vcs": {
-    "enabled": true,
+    "enabled": false,
     "clientKind": "git",
     "useIgnoreFile": true
   },
@@ -11,13 +12,11 @@
       "**/*.{js,cjs,mjs}",
       "**/*.{json,jsonc}",
       "**/*.{ts,cts,mts}",
+      "**/*.{tsx,jsx}",
       "**/*.d.{ts,cts,mts}",
       "**/*.{json,jsonc}",
-      "**/node_modules/**",
-      "**/dist/**",
-      "**/cdk.out/**",
-      "**/coverage/**",
-      "**/docs.out/**"
+      "!**/dist",
+      "!**/.next"
     ]
   },
   "formatter": {
@@ -58,7 +57,6 @@
       },
       "style": {
         "noCommonJs": "error",
-        "noInferrableTypes": "error",
         "noNamespace": "off",
         "noNegationElse": "off",
         "noSubstr": "error",
@@ -99,26 +97,6 @@
     }
   },
   "overrides": [
-    {
-      "includes": ["src/**/*"],
-      "linter": {
-        "rules": {
-          "style": {
-            "noDefaultExport": "error"
-          }
-        }
-      }
-    },
-    {
-      "includes": ["tools/**/*"],
-      "linter": {
-        "rules": {
-          "suspicious": {
-            "noConsole": "off"
-          }
-        }
-      }
-    },
     {
       "includes": ["**/*/*.test.ts", "**/__fixtures__/**/*", "**/__mocks__/**/*"],
       "linter": {
