--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "16.0.3",
-    "next-intl": "^4.5.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "next": "16.1.0",
+    "next-intl": "4.6.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
